// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collect 1`] = `
Object {
  "d": Object {
    "BAR": "f1",
    "FOO": "f2",
  },
}
`;

exports[`collect 2`] = `
Object {
  "d": Object {
    "BAR": "f1",
    "FOO": "f2",
  },
}
`;

exports[`flushing 1`] = `
Object {
  "d": Object {
    "type": "FLUSH",
  },
}
`;

exports[`flushing 2`] = `
Object {
  "d": Object {
    "type": "FOO",
  },
}
`;

exports[`flushing 3`] = `
Object {
  "d": Object {
    "type": "FLUSH",
  },
}
`;

exports[`flushing 4`] = `
Object {
  "d": Object {
    "type": "BAR",
  },
}
`;

exports[`flushing 5`] = `
Object {
  "d": Object {
    "type": "FLUSH",
  },
}
`;

exports[`map 1`] = `
Object {
  "d": Object {
    "type": "FOO",
    "value": "f1",
  },
}
`;

exports[`map 2`] = `
Object {
  "d": Object {
    "type": "BAZ",
    "value": Object {
      "d": Object {
        "type": "BAR",
        "value": "f1",
      },
    },
  },
}
`;

exports[`map 3`] = `
Object {
  "d": Object {
    "type": "FOO",
    "value": "f2",
  },
}
`;

exports[`map 4`] = `
Object {
  "d": Object {
    "type": "BAZ",
    "value": Object {
      "d": Object {
        "type": "BAR",
        "value": "f1",
      },
    },
  },
}
`;

exports[`map 5`] = `
Object {
  "d": Object {
    "type": "FLUSH",
  },
}
`;

exports[`map 6`] = `
Object {
  "d": Object {
    "type": "BAZ",
    "value": Object {
      "d": Object {
        "type": "BAR",
        "value": "f1",
      },
    },
  },
}
`;

exports[`map 7`] = `
Object {
  "d": Object {
    "type": "FLUSH",
  },
}
`;

exports[`pipe 1`] = `
Object {
  "d": Object {
    "type": "FOO",
    "value": "f1--s-foo",
  },
}
`;

exports[`pipe 2`] = `
Object {
  "d": Object {
    "type": "BAR",
    "value": "f1--s-bar",
  },
}
`;

exports[`pipe 3`] = `
Object {
  "d": Object {
    "type": "FOO",
    "value": "f2--s-foo",
  },
}
`;

exports[`pipe 4`] = `
Object {
  "d": Object {
    "type": "BAR",
    "value": "f1--s-bar",
  },
}
`;

exports[`pipe 5`] = `
Object {
  "d": Object {
    "type": "FLUSH",
  },
}
`;

exports[`pipe 6`] = `
Object {
  "d": Object {
    "type": "BAR",
    "value": "f1--s-bar",
  },
}
`;

exports[`pipe 7`] = `
Object {
  "d": Object {
    "type": "FLUSH",
  },
}
`;
